# myquant

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.Cowork/: HANDOFF.md
myquant/: __init__.py  ecos.py  ecos_db.py  fred.py  fred_db.py  macro_db.py  market.py  treasury.py  treasury_db.py
myquant/db/: __init__.py  __main__.py  cli.py  core.py  ecos.py  fred.py  market.py  migration.py  normalization.py  treasury.py
tests/: test_macro_db.py  test_normalization.py
