[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myquant"
version = "0.1.0"
description = "A secure FRED API client"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "MyQuant Contributors" },
]
keywords = ["fred", "finance", "api", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.0",
    "requests>=2.25",
    "python-dotenv>=1.0",
    "pykrx>=1.0",
    "yfinance>=0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["myquant*"]
